# aipipe

./: .gitignore  PLAN.md  README.md  TODO.md  pyproject.toml
src/aipipe/: __init__.py  __main__.py  cli.py
src/dag/: __init__.py  __main__.py  dag.py  inspect.py  llm_stage.py  loader.py  logger.py  markdown.py
src/llm/: __init__.py  chat.py  client.py  config.py  factory.py  keyring_backend.py  paths.py  probes.py  settings.py  setup.py  types.py
src/llm/impl/: __init__.py  _openai_compat.py  anthropic.py  azure_inference.py  claude_sdk.py  gemini.py  github_copilot.py  openai.py
tests/: test_dag.py  test_file_stage.py  test_inspect.py  test_llm.py  test_llm_stage.py  test_markdown.py  test_stage_from_file.py
