[project]
name = "aipipe"
version = "0.1.0"
description = "A small DAG-based dependency-resolving pipeline builder."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Yonatan Zunger" }]
dependencies = [
    "beartype>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dag"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]
