[project]
name = "aipipe"
version = "0.1.0"
description = "A small DAG-based dependency-resolving pipeline builder."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Yonatan Zunger" }]
dependencies = [
    "beartype>=0.19",
    "pyppin>=1.1.0",
    "keyring>=25",
    "python-dotenv>=1.0",
    # LLM provider SDKs. All providers are supported out of the box and
    # imported directly; we deliberately depend on them all rather than
    # gating each behind an optional extra. (azure-ai-inference is currently
    # prerelease-only — the explicit b9 lets the resolver accept it.)
    "anthropic>=0.40",
    "openai>=1.40",
    "azure-ai-inference>=1.0.0b9",
    "azure-identity>=1.17",
    "google-genai>=1.0",
    "claude-agent-sdk>=0.2",
    "github-copilot-sdk>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.scripts]
aipipe = "aipipe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dag", "src/llm", "src/aipipe"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]
